# general

./: MANIFEST.in  db.sqlite3  setup.cfg  setup.py
doc/: doc.md
general/: const.py  templatetags_utils.py
general.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
