[metadata]
name = general
version = 0.5
description = For reuse: const, mixins and utils.
author = Nonverbis
classifiers =
    Framework :: Django
    Framework :: Django :: 3.2.3
    Operating System :: Ubuntu
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
python_requires = >=3.8